--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -25,11 +25,10 @@
         android:layout_gravity="center"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
 
         android:id="@+id/imageView3"
         android:scaleType="fitCenter"
-        android:src= "@drawable/logo"
+        android:src= "@drawable/logoo"
       />
 
     <TextView
@@ -37,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginEnd="0dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:layout_below="@+id/imageView3"
 
         android:text="@string/HowToPlay"
@@ -87,7 +86,7 @@
             android:layout_centerHorizontal="true"
 
             android:src="@drawable/scan"
-            />
+            android:id="@+id/imageView5" />
 
 
 
@@ -99,7 +98,7 @@
         android:paddingStart="10dp"
         android:paddingEnd="0dp"
         android:layout_gravity="center"
-            android:layout_below="@+id/textView2"
+            android:layout_below="@+id/TestGif"
         android:layout_alignStart="@+id/textView2"
             android:layout_marginTop="20dp"
 
@@ -195,6 +194,16 @@
         android:clickable="true"
         android:longClickable="true" />
 
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:id="@+id/TestGif"
+            android:src="@drawable/empty_icon"
+            android:layout_below="@+id/textView2"
+            android:layout_alignStart="@+id/imageView5" />
 
-</RelativeLayout>
+
+    </RelativeLayout>
 </ScrollView>
