--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -20,7 +20,7 @@
         android:layout_marginBottom="20dp"
 
         android:id="@+id/imageView"
-        android:src="@drawable/secondary_logo"
+        android:src="@drawable/logo"
         />
 
 
