--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="center"
 
         android:id="@+id/imageView"
-        android:src="@drawable/secondary_logo"
+        android:src="@drawable/logoo"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
