--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -15,8 +15,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Score"
-        android:textSize="30dp"
-        android:textStyle="bold"
+        android:textColor="#ff7e8ab9"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:textSize="50sp"
         android:id="@+id/textViewScores"
         android:layout_gravity="center_horizontal"
         android:layout_alignParentTop="true"
@@ -31,7 +33,8 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/circle"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="30dp" />
+        android:layout_marginBottom="30dp"
+        />
 
     <TextView
         android:id="@+id/textViewScore"
@@ -48,108 +51,8 @@
         android:gravity="center" />
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Water"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:id="@+id/textViewWater"
-        android:layout_below="@+id/circle"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"/>
-
-    <View android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/circle"
-        android:id="@+id/circleWater"
-        android:layout_centerVertical="true"
-        android:layout_below="@+id/circle"
-        android:layout_toEndOf="@+id/textViewScore"
-        android:layout_marginTop="5dp"/>
-
-    <TextView
-        android:id="@+id/textViewWaterScore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/circleWater"
-        android:layout_alignTop="@+id/circleWater"
-        android:layout_alignRight="@+id/circleWater"
-        android:layout_alignBottom="@+id/circleWater"
-        android:hint="0"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:gravity="center" />
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Air"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:id="@+id/textViewAir"
-        android:layout_below="@+id/textViewWater"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"/>
-
-
-    <View android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/circle"
-        android:id="@+id/circleAir"
-        android:layout_below="@+id/circleWater"
-        android:layout_toEndOf="@+id/textViewScore"
-        android:layout_marginTop="5dp" />
-
-    <TextView
-        android:id="@+id/textViewAirScore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/circleAir"
-        android:layout_alignTop="@+id/circleAir"
-        android:layout_alignRight="@+id/circleAir"
-        android:layout_alignBottom="@+id/circleAir"
-        android:hint="0"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:gravity="center" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sun"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:id="@+id/textViewSun"
-        android:layout_below="@+id/textViewAir"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp" />
-
-    <View android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/circle"
-        android:id="@+id/circleSun"
-        android:layout_below="@+id/circleAir"
-        android:layout_toEndOf="@+id/textViewScore"
-        android:layout_marginTop="5dp" />
-
-    <TextView
-        android:id="@+id/textViewSunScore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/circleSun"
-        android:layout_alignTop="@+id/circleSun"
-        android:layout_alignRight="@+id/circleSun"
-        android:layout_alignBottom="@+id/circleSun"
-        android:hint="0"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:gravity="center" />
-
-
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="45dp"
         android:paddingRight="50dp"
         android:paddingLeft="50dp"
@@ -172,7 +75,7 @@
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="45dp"
         android:paddingRight="25dp"
         android:paddingLeft="25dp"
