--- a/app/src/main/res/layout/fragment_treasure_dialog.xml
+++ b/app/src/main/res/layout/fragment_treasure_dialog.xml
@@ -3,48 +3,33 @@
     android:layout_height="match_parent"
     tools:context="idk14.pfi3_finalproject_group1.TreasureDialog">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-
-        android:hint="You found water"
-
-        android:textSize="30sp"
-        android:id="@+id/treasureText"
-        android:textColor="#ff7e8ab9"
-        android:layout_centerHorizontal="true"
-        />
 
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
-        android:layout_above="@+id/treasureDescription"
-        android:layout_centerHorizontal="true"
 
         android:scaleType="fitCenter"
         android:id="@+id/treasureImage"
-        android:src="@drawable/airitem"
-        />
+        android:src="@drawable/water_icon"
+        android:layout_below="@+id/treasureText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="32dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:layout_above="@+id/scan_button"
-        android:layout_alignParentStart="true"
 
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/treasure_description"
         android:padding="20dp"
         android:id="@+id/treasureDescription"
         android:textColor="#ff7e8ab9"
-        />
+        android:layout_below="@+id/treasureImage"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="42dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -64,9 +49,33 @@
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="5"
-        android:layout_marginBottom="71dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        android:onClick="goToGameFragment"
+
+        android:text="Play on!"
+        android:id="@+id/back_to_game_button"
+
+        android:textColor="#fff"
+        android:background="@drawable/shape"
+        android:textSize="20sp"
+
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:layout_above="@+id/scan_button"
+        android:layout_centerHorizontal="true"
+        android:nestedScrollingEnabled="false" />
 
 
 </RelativeLayout>
