--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -15,15 +15,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Score"
+        android:textStyle="bold"
         android:textColor="#ff7e8ab9"
         android:gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:textSize="50sp"
         android:id="@+id/textViewScores"
         android:layout_gravity="center_horizontal"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:paddingTop="10dp"/>
+        android:paddingTop="10dp"
+        android:layout_marginBottom="10dp" />
 
     <View android:layout_width="160dp"
         android:layout_height="160dp"
@@ -40,12 +42,11 @@
         android:id="@+id/textViewScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/circle"
         android:layout_alignTop="@+id/circle"
-        android:layout_alignRight="@+id/circle"
         android:layout_alignBottom="@+id/circle"
+        android:layout_centerHorizontal="true"
         android:hint="0"
-        android:textSize="100dp"
+        android:textSize="120dp"
         android:textColor="#ffffffff"
         android:textStyle="bold"
         android:gravity="center" />
@@ -58,8 +59,6 @@
         android:paddingLeft="50dp"
         android:layout_gravity="center"
 
-        android:layout_marginBottom="20dp"
-
         android:text="@string/Scan"
         android:id="@+id/scanButton"
 
@@ -71,15 +70,15 @@
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="5"
-        android:layout_above="@+id/inventory_button"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/circle"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp" />
 
     <Button
         android:layout_width="200dp"
         android:layout_height="45dp"
         android:paddingRight="25dp"
         android:paddingLeft="25dp"
-        android:layout_marginBottom="20dp"
 
         android:text="@string/Inventory"
         android:id="@+id/inventory_button"
@@ -92,10 +91,9 @@
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="5"
-        android:layout_marginLeft="48dp"
-        android:layout_marginRight="48dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/scanButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp" />
 
 
 
