--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -34,9 +34,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginEnd="0dp"
         android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/imageView3"
 
         android:text="@string/HowToPlay"
