--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -3,7 +3,7 @@
 
 <ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
-
+    android:background="#fff"
     android:layout_width="50dp"
     android:layout_height="50dp"
     android:id="@+id/iv_treasurePic"
