fixed number of columns to three

--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -27,8 +27,8 @@
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
         android:id="@+id/gridView"
-        android:columnWidth="75dp"
-        android:numColumns="auto_fit"
+        android:columnWidth="100dp"
+        android:numColumns="3"
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
         android:stretchMode="spacingWidth"
