--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -11,7 +11,7 @@
 
     android:background="#fff"
     >
-    <TextView
+    <idk14.pfi3_finalproject_group1.MyFonts
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Score"
@@ -25,7 +25,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp" />
 
-    <View android:layout_width="180dp"
+    <View
+        android:layout_width="180dp"
         android:layout_height="180dp"
         android:background="@drawable/circle"
         android:gravity="center_vertical"
@@ -36,7 +37,7 @@
         android:layout_marginBottom="30dp"
         />
 
-    <TextView
+    <idk14.pfi3_finalproject_group1.MyFonts
         android:id="@+id/textViewScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
