--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
 
-    <TextView
+    <idk14.pfi3_finalproject_group1.MyFonts
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Inventory"
