--- a/app/src/main/res/layout/fragment_sun.xml
+++ b/app/src/main/res/layout/fragment_sun.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="idk14.pfi3_finalproject_group1.SunFragment">
 
-    <TextView
+    <idk14.pfi3_finalproject_group1.MyFonts
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
