--- a/app/src/main/res/layout/fragment_water.xml
+++ b/app/src/main/res/layout/fragment_water.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     tools:context="idk14.pfi3_finalproject_group1.WaterFragment">
 
-    <TextView
+    <idk14.pfi3_finalproject_group1.MyFonts
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
