--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context="idk14.pfi3_finalproject_group1.InventoryFragment"
+    tools:context="idk14.pfi3_finalproject_group1.Inventory.InventoryFragment"
     android:orientation="vertical">
 
 
-    <idk14.pfi3_finalproject_group1.MyFonts
+    <idk14.pfi3_finalproject_group1.Helpers.MyFonts
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Inventory"
