--- a/app/src/main/res/layout/fragment_treasure_dialog.xml
+++ b/app/src/main/res/layout/fragment_treasure_dialog.xml
@@ -1,10 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="idk14.pfi3_finalproject_group1.TreasureDialog"
+    tools:context="idk14.pfi3_finalproject_group1.Inventory.TreasureDialog"
     android:background="#fff">
 
-    <idk14.pfi3_finalproject_group1.MyFonts
+    <idk14.pfi3_finalproject_group1.Helpers.MyFonts
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
