--- a/app/src/main/res/layout/fragment_air.xml
+++ b/app/src/main/res/layout/fragment_air.xml
@@ -1,6 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="idk14.pfi3_finalproject_group1.AirFragment">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#fff"
+    tools:context="idk14.pfi3_finalproject_group1.TreasureDialogs.AirFragment">
 
     <TextView
         android:layout_width="wrap_content"
