--- a/app/src/main/res/layout/fragment_empty2.xml
+++ b/app/src/main/res/layout/fragment_empty2.xml
@@ -1,7 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="idk14.pfi3_finalproject_group1.EmptyFragment">
+    android:background="#fff"
+    tools:context="idk14.pfi3_finalproject_group1.TreasureDialogs.EmptyFragment">
 
     <TextView
         android:layout_width="wrap_content"
